--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
-header {
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.cabecalho {
     background-color: #424E61;
     color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 24px 0;
 }
 
 .cabecalho-imagem{
-    width: 20%;
+    width: 120px 100px;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
 }
