--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .cabecalho {
-    background-color: #424E61;
+    background-color: #0060fa;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -13,7 +13,8 @@
 }
 
 .cabecalho-imagem{
-    width: 120px 100px;
+    width: 20%;
+
 }
 
 .cabecalho-lista-item{
