--- a/style.css
+++ b/style.css
@@ -1,23 +1,43 @@
 *{
     margin: 0;
     padding: 0;
-}
 
+}
 .cabecalho {
-    background-color: #0060fa;
-    color: white;
-    display: flex;
-    justify-content: space-around;
+    background-color: rgb(151, 149, 149);
+    color: white; 
+    display: flex;  
+    justify-content: space-around; 
     align-items: center;
-    margin: 24px 0;
+    padding: 24px 0;
+}
+.cabecalho-imagem {
+    width: 10%;
 }
 
-.cabecalho-imagem{
-    width: 20%;
-
-}
-
-.cabecalho-lista-item{
+.cabecalho-lista-imagem{
     display: inline-block;
     margin: 0 16px;
+    font-size: 24px;
+}
+
+.Booksworld-imagem{
+    width: 25%;
+    margin:0 16px;
+}
+
+.Booksworld{
+    background-image: linear-gradient(rgb(151, 149, 149), rgb(92, 89, 89) );
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Booksworld-div-conteudo{
+    width: 35%;
+}
+
+.Booksworld-titulo{
+    padding: 24px 0;
 }
