--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-
 }
+
 .cabecalho {
-    background-color: rgb(151, 149, 149);
+    background-color: black;
     color: white; 
     display: flex;  
     justify-content: space-around; 
@@ -27,12 +27,12 @@
 }
 
 .Booksworld{
-    background-image: linear-gradient(rgb(151, 149, 149), rgb(92, 89, 89) );
+    background-image: linear-gradient(black, white);
     color: white;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
+
 
 .Booksworld-div-conteudo{
     width: 35%;
