--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 .Booksworld-imagem{
-    width: 25%;
+    width: 30%;
     margin:0 16px;
 }
 
@@ -40,4 +40,16 @@
 
 .Booksworld-titulo{
     padding: 24px 0;
+}
+
+.genero-ficcaoimagem{
+    width: 120px;
+}
+
+.genero-icone{
+    width: 24px;
+}
+
+.genero-div{
+    text-align: center;
 }
